--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>Your Profession</p>
+    <div class="profile-image"></div>
+    <div class="title">
+      <h1>Your Name</h1>
+      <p>Your Profession</p>
+    </div>
   </header>
+  <section>
+    <div id="output"></div>
+  </section>
   <section>
     <h2>About Me</h2>
     <p>Brief description about yourself.</p>
@@ -42,6 +48,6 @@
   <footer>
     <p>Contact Information: email@example.com</p>
   </footer>
-  <script src="scripts.js"></script>
+  <script src="./js/scripts.js"></script>
 </body>
 </html>
