added static hero

--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 </head>
 <body>
   <header>
-    <div class="profile-image"></div>
-    <div class="title">
-      <h1>Your Name</h1>
-      <p>Your Profession</p>
+    <div class="title-box">
+      <div class="img-box">
+        <div class="profile-image">
+          <img src="./images/profile.jpeg" alt="Profile Image">
+        </div>
+      </div>
+  
+      <div class="title">
+        <h1>Your Name</h1>
+        <p>Your Profession</p>
+      </div>
     </div>
   </header>
-  <section>
+  <section class="hero-image">
     <div id="output"></div>
   </section>
   <section>
