added card for resume

--- a/index.html
+++ b/index.html
@@ -25,30 +25,43 @@
     <div id="output"></div>
   </section>
   <section>
-    <h2>About Me</h2>
-    <p>Brief description about yourself.</p>
+    <div class="resume-card">
+      <h2>Resume</h2>
+      <h3>About Me</h3>
+      <p>Brief description about yourself.</p>
+      <h3>Experience</h3>
+      <ul>
+        <li>Job Title at Company - Duration</li>
+        <li>Job Title at Company - Duration</li>
+        <!-- Add more as needed -->
+      </ul>
+      <h3>Education</h3>
+      <ul>
+        <li>Degree at Institution - Year</li>
+        <li>Degree at Institution - Year</li>
+        <!-- Add more as needed -->
+      </ul>
+      <h3>Skills</h3>
+      <ul>
+        <li>Skill 1</li>
+        <li>Skill 2</li>
+        <!-- Add more as needed -->
+      </ul>
+    </div>
   </section>
   <section>
-    <h2>Experience</h2>
+    <h2>Current Projects</h2>
     <ul>
-      <li>Job Title at Company - Duration</li>
-      <li>Job Title at Company - Duration</li>
+      <li>Project 1 - Description</li>
+      <li>Project 2 - Description</li>
       <!-- Add more as needed -->
     </ul>
   </section>
   <section>
-    <h2>Education</h2>
+    <h2>Open Source Work</h2>
     <ul>
-      <li>Degree at Institution - Year</li>
-      <li>Degree at Institution - Year</li>
-      <!-- Add more as needed -->
-    </ul>
-  </section>
-  <section>
-    <h2>Skills</h2>
-    <ul>
-      <li>Skill 1</li>
-      <li>Skill 2</li>
+      <li>Project 1 - Description</li>
+      <li>Project 2 - Description</li>
       <!-- Add more as needed -->
     </ul>
   </section>
